# learn-agents

./: .env  00-basic.ipynb  main.py  pyproject.toml
agent-by-imooc/: 01-agent.ipynb  02-mcp.ipynb  03-mutil-chat.ipynb  03-mutil-chat.py  main.py  pyproject.toml  reflection.ipynb  reflection_fixed.ipynb
agent-by-imooc/agent/: 03-mutil-chat.py  04-agent_chat-with-mem.py  04-agent_chat.py
agent-by-imooc/data/conversations/user1/: user1_82b8d5d4-8ebf-4a55-a892-426542deb8c8.json
agent-by-imooc/pkg/chat_model/: qwen.py
agent-by-imooc/pkg/checkpointer/: file_saver.py
agent-by-imooc/pkg/tools/: calc.py
ai_agent_with_langchain/: .gitignore  README.md
ai_agent_with_langchain/app/bailian/: bailian.py  bailian_agent.py  bailian_output_parser.py  bailian_prompt.py  bailian_python_perl.py  bailian_qwq.py  bailian_runnables.py  bailian_tools.py  common.py
ai_agent_with_langchain/app/book/: langgraph_test.ipynb
ai_agent_with_langchain/app/code_agent/agent/: agent_chat.py  code_agent.py  langgraph_multi_agent_test.py  langgraph_workflow.py  model_chat.py
ai_agent_with_langchain/app/code_agent/mcp/: browser_tools.py  mysql_tools.py  powershell_tools.py  shell_tools.py  terminal_tools.py  vm.py
ai_agent_with_langchain/app/ollama/: ollama.py
ai_agent_with_langchain/test/: deepseek_test.py  deepseek_test2.py  qwen3_test.py  qwen_test.py
learn-agents-v0/: 00-langfuse.ipynb  main.py  pyproject.toml
learn-agents-v0/dataset/: bohe-food-img-recon.csv  支付宝-1118.csv  支付宝-1118badcase.csv
learn-agents-v0/example/: 00-chatbot.ipynb  00-chatbot.py
learn-agents-v0/reflection_agent/: base01.py  img_identify.py  recom.py
pkg/tools/: amap.py  calc.py
reflection_agent/: by_langgrap.py  img_identify.py  recom.py
resources/: 支付宝图片识别数据集.csv
with-imooc/: 00-llm.ipynb  01-agent.ipynb  reflection.ipynb
(+21 files in other folders)
